[gd_scene load_steps=2 format=2]

[ext_resource path="res://Utils/Scripts/Joint.gd" type="Script" id=1]

[node name="Joint" type="Spatial"]
script = ExtResource( 1 )

[node name="NorthRay" type="RayCast" parent="."]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 1, -1.5 )
enabled = true
cast_to = Vector3( 0, 0, 25 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="WestRay" type="RayCast" parent="."]
transform = Transform( -0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, -0.258819, 0, 1, -1.5 )
enabled = true
cast_to = Vector3( 0, 0, 25 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="EastRay" type="RayCast" parent="."]
transform = Transform( -0.258818, 0, 0.965925, 0, 1, 0, -0.965925, 0, -0.258818, 0, 1, -1.5 )
enabled = true
cast_to = Vector3( 0, 0, 25 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false
